[tool.poetry]
name = "daemon-moderans-linux-stable"
version = "0.1.0"
description = ""
authors = ["wizock <silent.death3500@gmail.com>"]
readme = "README.md"
packages = [{include = "daemon_moderans_linux_stable"}]

[tool.poetry.dependencies]
python = "^3.11"
APScheduler = "3.9.1.post1"
colorama= "0.4.6"
cryptography= "39.0.1"
fastapi= "0.94.1"
httpx= "0.23.0"
gevent= "22.10.2"
lz4= "4.3.2"
passlib= "1.7.4"
Pillow= "9.4.0"
pydantic= "1.10.4"
pytest_cov= "4.0.0"
python_jose= "3.3.0"
redis= "4.4.0"
SQLAlchemy= "1.4.46"
starlette= "0.26.1"
typing_extensions= "4.4.0"
uvicorn= "0.20.0"
itsdangerous= "2.1.2"
psycopg2-binary= "2.9.5"
pycrypto= "2.6.1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
pip install 
